Missed yet another test using Java 11 syntax